--- a/index.html
+++ b/index.html
@@ -1,295 +1,214 @@
+<!-- SOURCE CODE DARI LOLHUMAN -->
+<!-- Nyomot? silakan gada yang larang -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBSITE TAKASHI</title>
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url(https://telegra.ph/file/1ae2561e1d80af381700f.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    padding: 40px;
-    
-}
-
-.container {
-    position: relative;
-    width: calc(100% - 100px);
-    background: rgba(255, 255, 255, 0.308);
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
-    min-height: calc(100vh - 280px);
-    min-height: 300px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px;
-    padding-top: 100px;
-    margin-top: 40px;
-}
-
-header {
-    position: absolute;
-    right: 20px;
-    left: 20px;
-    top: -40px;
-    padding: 20px 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgba(255, 255, 255, 0.2);
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
-    border-radius: 20px;
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-header .logo {
-    color: #fd21bb;
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 2.5em;
-}
-
-header ul {
-    display: flex;
-}
-
-header ul li {
-    list-style: none;
-    margin: 0 10px;
-}
-
-header ul li a {
-    text-decoration: none;
-    font-weight: 500;
-    color: #000000;
-    padding: 8px 15px;
-    border-radius: 25px;
-}
-
-header ul li a:hover,
-header ul li a.active {
-    background: #fff;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.content {
-    transform: translateX(-100px);
-    max-width: 700px;
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    padding: 40px;
-    padding-left: 110px;
-}
-
-.content h2 {
-    font-size: 2.5em;
-    color: #fd21bb;
-    padding-bottom: 10px;
-}
-
-.content p {
-    font-size: 19px;
-    color: #000000;
-}
-
-.content a {
-    display: inline-block;
-    padding: 15px 30px;
-    background: #fff;
-    color: #000000;
-    margin-top: 20px;
-    border-radius: 30px;
-    font-size: 1.2em;
-    font-weight: 500;
-    text-decoration: none;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-} 
-
-.imgBx {
-    max-width: -200px;
-    animation: animate 5s linear infinite;
-}
-@keyframes animate
-{
-    0%,100%
-    {
-        transform: translateY(50px);
-    }
-    50% 
-    {
-        transform: translateY(100px);
-    }
-}
-
-.sci {
-    position: absolute;
-    right: -25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.sci li {
-    list-style: none;
-}
-
-.sci li a {
-    text-decoration: none;
-    width: 50px;
-    height: 50px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    margin: 5px 0;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.sci li a img {
-    transform: scale(0.6);
-    transition: 0.5s;
-}
-
-.sci li:hover a img {
-    transform: scale(0.6) rotate(360deg);
-}
-
-.copyrightText {
-    position: absolute;
-    bottom: 2px;
-    left: 70px;
-    color: rgb(177, 177, 177);
-}
-
-@media (max-width: 1200px) {
-    .container {
-        position: relative;
-        width: calc(100% - 20px);
-    }
-}
-
-@media (max-width: 992px) {
-    section {
-        padding: 50px 10px 10px;
-    }
-    .container {
-        flex-direction: column;
-        height: auto;
-        padding: 20px;
-    }
-    .container .content {
-        transform: translateX(0px);
-        max-width: 100%;
-        padding: 30px;
-        margin-top: -40px;
-    }
-    header {
-        position: relative;
-        flex-direction: column;
-        width: 100%;
-        top: -60px;
-        padding: 20px;
-        right: 0px;
-        left: 0px;
-    }
-    header ul {
-        margin-top: 10px;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    header ul li {
-        margin: 2px;
-    }
-}
-header ul li a {
-        display: inline-block;
-    }
-    .sci {
-        position: relative;
-        flex-direction: row;
-        left: 0;
-    }
-    .imgBx {
-        margin-bottom: 50px;
-    }
-    .content a {
-        font-size: 1em;
-        padding: 10px 20px;
-    }
-
-@keyframes animate{
-    0%,100%
-    {
-        transform: translateY(-20px);
-    }
-    50% 
-    {
-        transform: translateY(20px);
-    }
-}
-.sci li a {
-    margin: 0 10px;
-}
-
-@media (max-width: 600px) {
-    .content h2 {
-        font-size: 1.5em;
-        color: #000000;
-    }
-    .imgBx img {
-        max-width: 300px;
-    }
-}
-    </style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+       <meta name="description" content="YanzBotz-APIs website that provides a wide variety of features for developers.">
+    <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
+    <meta name="author" content="YanzBotz">
+    <title>YanzBotz - YanzBotz-APIs</title>
+    <meta property="og:site_name" name="og:site_name" content="YanzBotz APIs">
+    <meta property="og:title" name="og:title" content="YanzBotz - REST APIs">
+<meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
+<meta property="og:image" content="https://telegra.ph/file/f90fa948e64f8d9499bd0.jpg">
+<link rel="shortcut icon" href="https://telegra.ph/file/f90fa948e64f8d9499bd0.jpg"/>  
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script><br><br><br>
+<meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="canonical" href="/">
 </head>
 <body>
-    <section>
-        <div class="container">
-            <header>
-                <a href="/docs" class="logo">WELCOME...</a>
-                <ul>
-                                        <li><a href="/" class="active">HOME</a></li>
-                    <li><a href="/" class="active">ABOUT</a></li>
-                </ul>
-            </header>
-            <div class="content">
-                <h2>MOBILE LEGENDS</h2>
-                <p>PUNISHING GRAY RAVEN</p>
-                    <a href="/docs">DOCS</a>
-                    <a href="/text2image/generate-online">AI GENERATOR</a>
-            </div>
-            <ul class="sci">
-            <li><a href="https://chat.whatsapp.com/FRB5jSjjOmeGSFoAx4O1X0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1191px-WhatsApp.svg.png" style="max-width: 50px; max-height: 50px;"></a></li>
-            <li><a href="https://github.com/izukioka"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" style="max-width: 50px; max-height: 50px;"></a></li>
-            <li><a href="https://instagram.com/kiri_var"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" style="max-width: 50px; max-height: 50px;"></a></li>
-        </ul>
-            <p class="®2024."></p>
+  <body>
+  </body>
+    <div class="text">
+        <div class="status">
+            <p>STATUS : <span class="typed-text"></span><span class="cursor typing"></span></p>
         </div>
-    </section>
+        <hr>
+<!-- Docs In Here! -->
+        <div class="readdocs">
+            <p>Read <a href="/dashboard" class="docs">Docs.</a></p>
+        </div>
+    </div>
+    <div class="bottom">
+        <p>
+<!-- Change Instagram Link In Here! -->
+<a href="https://chat.whatsapp.com/LG6gtLZHgXk6gkTsbL5zpV" target="_blank" rel="noopener noreferrer" class="sosmed">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                 <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+                </svg> Group WhatsApp
+    <span data-icon="psa-verified" class="">
+        <svg viewBox="0 0 18 18" height="18" width="18" preserveAspectRatio="xMidYMid meet" class="" version="1.1" x="0px" y="0px" enable-background="new 0 0 18 18">
+            <title>psa-verified</title>
+            <polygon id="Star-2" fill="#00DA60" points="9,16 7.1,16.9 5.8,15.2 3.7,15.1 3.4,13 1.5,12 2.2,9.9 1.1,8.2 2.6,6.7 2.4,4.6 4.5,4 5.3,2 7.4,2.4 9,1.1 10.7,2.4 12.7,2 13.6,4 15.6,4.6 15.5,6.7 17,8.2 15.9,9.9 16.5,12 14.7,13 14.3,15.1 12.2,15.2 10.9,16.9 "></polygon>
+            <polygon id="Check-Icon" fill="#FFFFFF" points="13.1,7.3 12.2,6.5 8.1,10.6 5.9,8.5 5,9.4 8,12.4 "></polygon>
+        </svg>
+    </span>
+</a>            
+        </p>
+    </div>
+</body>
+    <style>
+@import url(https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Ubuntu, sans-serif
+}
+
+html {
+    background: url("https://telegra.ph/file/1ae2561e1d80af381700f.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh
+}
+
+div.text {
+    position: absolute
+}
+
+div.text .status {
+    position: relative;
+    animation: animetop .8s
+}
+
+div.text .readdocs {
+    position: relative;
+    animation: animebot .8s;
+    text-align: center
+}
+
+@keyframes animetop {
+    0% {
+        top: -200px;
+        opacity: 0
+    }
+    100% {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animebot {
+    0% {
+        top: 200px;
+        opacity: 0
+    }
+    100% {
+        top: 0;
+        opacity: 1
+    }
+}
+
+p {
+    color: rgba(255, 255, 255, .8);
+    letter-spacing: .15em;
+    font-size: 15px!important;
+    font-weight: 600
+}
+
+a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, .5)
+}
+
+a.sosmed {
+    color: rgba(255, 255, 255, .8)
+}
+
+a:hover {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 1)
+}
+
+.typed-text {
+    color: #0f0
+}
+
+.cursor {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typing 1.5s steps(40, end), blink-caret .75s step-end infinite
+}
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+@keyframes blink-caret {
+    from,
+    to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange
+    }
+}
+
+hr {
+    margin: 10px auto;
+    position: relative;
+    background: rgba(255, 255, 255, .5);
+    width: 80%;
+    height: 2px
+}
+
+div.bottom {
+    position: fixed;
+    left: 50%;
+    bottom: 50px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto
+}
+</style>
+
+<script>
+const typedTextSpan = document.querySelector(".typed-text"),
+    textArray = ["AKTIF~", "ONLINE~"],
+    typingDelay = 200,
+    erasingDelay = 100,
+    newTextDelay = 2e3;
+let textArrayIndex = 0,
+    charIndex = 0;
+
+function type() { charIndex < textArray[textArrayIndex].length ? (typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex), charIndex++, setTimeout(type, 200)) : setTimeout(erase, 2e3) }
+
+function erase() { charIndex > 0 ? (typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex - 1), charIndex--, setTimeout(erase, 100)) : (textArrayIndex++, textArrayIndex >= textArray.length && (textArrayIndex = 0), setTimeout(type, 1300)) }
+document.addEventListener("DOMContentLoaded", (function() { setTimeout(type, 2250) }));
+
+$(document).ready((function() {
+    $(".changeprofile").submit((function(e) {
+        var formObj, formURL = $(this).attr("action"),
+            formData = new FormData(this);
+        $.ajax({ url: formURL, type: "POST", data: formData, contentType: !1, cache: !1, processData: !1, beforeSend: function() { $("button").attr("disabled", "disabled"), $("input").attr("disabled", "disabled"), $("a").attr("disabled", "disabled"), $(".inibutton").html('<i class="fas fa-spinner fa-spin"></i> Wait') }, success: function(data) { data.includes("Success") ? ($("button").removeAttr("disabled", "disabled"), $("a").removeAttr("disabled", "disabled"), $("input").removeAttr("disabled", "disabled"), $(".inibutton").html("Save"), $.notify({ icon: "tim-icons icon-check-2", message: data }, { type: "success", timer: 3e3, placement: { from: "top", align: "right" } }), window.location = window.location) : ($("button").removeAttr("disabled", "disabled"), $("a").removeAttr("disabled", "disabled"), $("input").removeAttr("disabled", "disabled"), $(".inibutton").html("Save"), $.notify({ icon: "tim-icons icon-simple-remove", message: data }, { type: "danger", timer: 3e3, placement: { from: "top", align: "right" } })) } }), e.preventDefault()
+    }))
+}))
+
+</script>
+<body>
+<div>
+</div>
 </body>
 </html>
