--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 html {
 
-    background: url("https://telegra.ph/file/1ae2561e1d80af381700f.jpg") no-repeat center center fixed;
+    background: url("https://media.tenor.com/MkI8xJLf6iwAAAAC/background-aesthetic.gif") no-repeat center center fixed;
 
     -webkit-background-size: cover;
 
