--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 html {
 
-    background: url("https://media.tenor.com/MkI8xJLf6iwAAAAC/background-aesthetic.gif") no-repeat center center fixed;
+    background: url("https://telegra.ph/file/1ae2561e1d80af381700f.jpg") no-repeat center center fixed;
 
     -webkit-background-size: cover;
 
@@ -377,8 +377,6 @@ div.bottom {
 
             <header>
 
-                <a href="/docs" class="logo">WELCOME...</a>
-
             </ul>
 
             </header>
@@ -415,7 +413,7 @@ div.bottom {
 
 const typedTextSpan = document.querySelector(".typed-text"),
 
-    textArray = ["AKTIF~", "ONLINE~"],
+    textArray = ["WELCOME", "WELCOME..."],
 
     typingDelay = 200,
 
