--- a/index.html
+++ b/index.html
@@ -365,6 +365,279 @@ div.bottom {
     margin: 0 auto
 
 }
+        .imgBx {
+
+    max-width: -200px;
+
+    animation: animate 5s linear infinite;
+
+}
+
+@keyframes animate
+
+{
+
+    0%,100%
+
+    {
+
+        transform: translateY(50px);
+
+    }
+
+    50% 
+
+    {
+
+        transform: translateY(100px);
+
+    }
+
+}
+
+
+
+.sci {
+
+    position: absolute;
+
+    right: -25px;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    flex-direction: column;
+
+}
+
+
+
+.sci li {
+
+    list-style: none;
+
+}
+
+
+
+.sci li a {
+
+    text-decoration: none;
+
+    width: 50px;
+
+    height: 50px;
+
+    background: #fff;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    border-radius: 50%;
+
+    margin: 5px 0;
+
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+
+}
+
+
+
+.sci li a img {
+
+    transform: scale(0.6);
+
+    transition: 0.5s;
+
+}
+
+
+
+.sci li:hover a img {
+
+    transform: scale(0.6) rotate(360deg);
+
+}
+
+
+
+.copyrightText {
+
+    position: absolute;
+
+    bottom: 2px;
+
+    left: 70px;
+
+    color: rgb(177, 177, 177);
+
+}
+
+
+
+@media (max-width: 1200px) {
+
+    .container {
+
+        position: relative;
+
+        width: calc(100% - 20px);
+
+    }
+
+}
+
+
+
+@media (max-width: 992px) {
+
+    section {
+
+        padding: 50px 10px 10px;
+
+    }
+
+    .container {
+
+        flex-direction: column;
+
+        height: auto;
+
+        padding: 20px;
+
+    }
+
+    .container .content {
+
+        transform: translateX(0px);
+
+        max-width: 100%;
+
+        padding: 30px;
+
+        margin-top: -40px;
+
+    }
+
+    header {
+
+        position: relative;
+
+        flex-direction: column;
+
+        width: 100%;
+
+        top: -60px;
+
+        padding: 20px;
+
+        right: 0px;
+
+        left: 0px;
+
+    }
+
+    header ul {
+
+        margin-top: 10px;
+
+        flex-wrap: wrap;
+
+        justify-content: center;
+
+    }
+
+    header ul li {
+
+        margin: 2px;
+
+    }
+
+}
+
+header ul li a {
+
+        display: inline-block;
+
+    }
+
+    .sci {
+
+        position: relative;
+
+        flex-direction: row;
+
+        left: 0;
+
+    }
+
+    .imgBx {
+
+        margin-bottom: 50px;
+
+    }
+
+    .content a {
+
+        font-size: 1em;
+
+        padding: 10px 20px;
+
+    }
+
+
+
+@keyframes animate{
+
+    0%,100%
+
+    {
+
+        transform: translateY(-20px);
+
+    }
+
+    50% 
+
+    {
+
+        transform: translateY(20px);
+
+    }
+
+}
+
+.sci li a {
+
+    margin: 0 10px;
+
+}
+
+
+
+@media (max-width: 600px) {
+
+    .content h2 {
+
+        font-size: 1.5em;
+
+        color: #000000;
+
+    }
+
+    .imgBx img {
+
+        max-width: 300px;
+
+    }
+
+    }
  </style>
 
 </head>
