--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="text">
 
-        <div class="status">
+        <div class="WELCOME">
 
             <p>STATUS : <span class="typed-text"></span><span class="cursor typing"></span></p>
 
@@ -686,7 +686,7 @@ header ul li a {
 
 const typedTextSpan = document.querySelector(".typed-text"),
 
-    textArray = ["WELCOME", "WELCOME..."],
+    textArray = ["USERS", "USERS..."],
 
     typingDelay = 200,
 
