--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ header ul li a {
 
 const typedTextSpan = document.querySelector(".typed-text"),
 
-    textArray = ["USERS", "USERS..."],
+    textArray = ["ONLINE", "ONLINE..."],
 
     typingDelay = 200,
 
