--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
        <meta name="description" content="Rezex bakal menjadi rest api untuk kedepannya.">
 
+<h1 align="center">Rezex</h1>
+    
+    
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
 
     <meta name="author" content="Rezex">
