--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ header ul li a {
 
     .imgBx {
 
-        margin-bottom: 50px;
+        margin-bottom: 18pxpx;
 
     }
 
@@ -618,13 +618,13 @@ header ul li a {
 
 .sci li a {
 
-    margin: 0 10px;
+    margin: 0 18pxpx;
 
 }
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 18pxpx) {
 
     .content h2 {
 
@@ -636,7 +636,7 @@ header ul li a {
 
     .imgBx img {
 
-        max-width: 300px;
+        max-width: 18pxpx;
 
     }
 
