--- a/index.html
+++ b/index.html
@@ -579,10 +579,9 @@ header ul li a {
         left: 0;
 
     }
-
     .imgBx {
 
-        margin-bottom: 50pxpx;
+        margin-bottom: 50px;
 
     }
 
@@ -618,13 +617,13 @@ header ul li a {
 
 .sci li a {
 
-    margin: 0 18pxpx;
+    margin: 0 10px;
 
 }
 
 
 
-@media (max-width: 600pxpx) {
+@media (max-width: 600px) {
 
     .content h2 {
 
@@ -636,11 +635,12 @@ header ul li a {
 
     .imgBx img {
 
-        max-width: 300pxpx;
+        max-width: 300px;
 
     }
 
-    }
+}
+
  </style>
 
 </head>
