--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 <!-- Docs In Here! -->
 
-        <div class="readdocs">
+        <div class="Teacher">
 
-            <p>Read <a href="/dashboard" class="docs">Docs.</a></p>
+            <p>Read <a href="/dashboard" class="https://wa.me/6288802101736">Contact Me</a></p>
 
         </div>
 
