--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 <!-- Docs In Here! -->
 
-        <div class="Teacher">
+        <div class="readdocs">
 
-            <p>Read <a href="/dashboard" class="https://wa.me/6288802101736">Contact Me</a></p>
+            <p>Read <a href="/dashboard" class="docs">Docs.</a></p>
 
         </div>
 
@@ -661,7 +661,7 @@ header ul li a {
 
             <ul class="sci">
 
-            <li><a href="https://chat.whatsapp.com/FRB5jSjjOmeGSFoAx4O1X0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1191px-WhatsApp.svg.png" style="max-width: 50px; max-height: 50px;"></a></li>
+            <li><a href="https://wa.me/6288802101736"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1191px-WhatsApp.svg.png" style="max-width: 50px; max-height: 50px;"></a></li>
 
             <li><a href="https://github.com/izukioka"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" style="max-width: 50px; max-height: 50px;"></a></li>
 
