--- a/index.html
+++ b/index.html
@@ -684,9 +684,13 @@ header ul li a {
         <div class="container">
 
             <header>
+                                <ul>
 
-            </ul>
+                                        <li><a href="/" class="active">HOME</a></li>
 
+                    <li><a href="/" class="active">ABOUT</a></li>
+
+                                </ul>
             </header>
 
             </div>
