--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <meta property="og:title" name="og:title" content="Rezex">
 
-<meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
+<meta property="og:description" name="og:description" content="Rezex bakal menjadi rest api untuk kedepannya.">
 
 <meta property="og:image" content="https://telegra.ph/file/1ae2561e1d80af381700f.jpg">
 
@@ -685,11 +685,7 @@ header ul li a {
 
             <header>
                                 <ul>
-
                                         <li><a href="/" class="active">HOME</a></li>
-
-                    <li><a href="/" class="active">ABOUT</a></li>
-
                                 </ul>
             </header>
 
