--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="readdocs">
 
-            <p>Read <a href="/dashboard" class="docs">Docs.</a></p>
+            <p>Read <a href="/dashboard" class="https://rezex-five.vercel.app/">Home.</a></p>
 
         </div>
 
