--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="readdocs">
 
-            <p>Read <a href="/dashboard" class="docs">more.</a></p>
+            <p>Learn <a href="/dashboard" class="docs">more.</a></p>
 
         </div>
 
