--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
     <meta property="og:title" name="og:title" content="Rezex">
 
-<meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
+<meta property="og:description" name="og:description" content="Rezex adalah rest api website.">
 
-<meta property="og:image" content="https://telegra.ph/file/1ae2561e1d80af381700f.jpg">
+<meta property="og:image" content="https://telegra.ph/file/d0f122f0f80b2c6d412be.jpg">
 
-<link rel="shortcut icon" href="https://telegra.ph/file/1ae2561e1d80af381700f.jpg"/>  
+<link rel="shortcut icon" href="https://telegra.ph/file/d0f122f0f80b2c6d412be.jpg"/>  
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
