--- a/index.html
+++ b/index.html
@@ -688,7 +688,9 @@ header ul li a {
                                         <li><a href="/" class="active">HOME</a></li>
                                 </ul>
             </header>
-
+        </div>
+  <div class="imgBx">
+            <img src="https://pomf2.lain.la/f/wk0btj7u.gif">
             </div>
 
             <ul class="sci">
