--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ header ul li a {
 
             <header>
                                 <ul>
-                                        <li><a href="/" class="active">HOME</a></li>
+                                        <li><a href="/" class="active">WELCOME..</a></li>
                                 </ul>
             </header>
         </div>
