--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ header ul li a {
 
             <li><a href="https://github.com/izukioka"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" style="max-width: 50px; max-height: 50px;"></a></li>
 
-            <li><a href="https://instagram.com/kiri_var"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" style="max-width: 50px; max-height: 50px;"></a></li>
+            <li><a href="https://www.instagram.com/dcode_ln_md/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" style="max-width: 50px; max-height: 50px;"></a></li>
 
         </ul>
 
