--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
+y<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script><br><br><br>
+<meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="canonical" href="/">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
